# Automatic-3D-pipe-adapter

./: .gitignore  README.md  pyproject.toml  vacuum cleaner adapter.py
vca/: adapter.py  calc.py  con_mesh.py  cone.py  cylinder.py  main.py  picture.py  ring.py  tests.py  text.py
