[project]
name = "automatic-3d-pipe-adapter"
version = "0.1.0"
description = "Gnerate 3d model vacume clear adaptrer"
requires-python = ">=3.13"
dependencies = [
    "manifold3d>=3.2.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "numpy-stl>=3.2.0",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
    "trimesh>=4.8.3",
]
